--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,12 @@
 	<title>ПМК</title>
 </head>
 <body>
+	<div class="preloader">
+		<div class="preloader__row">
+			<div class="preloader__item"></div>
+			<div class="preloader__item"></div>
+		</div>
+	</div>
 	<div class="wrapper">
 		<header class="header">
 			<div class="header__container">
