--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,9 @@
 		<header class="header">
 			<div class="header__container">
 				<div class="header__content">
-					<img src="./assets/img/header/header__logo.svg" alt="Header logo" class="header__logo">
+					<a href="https://permedcom.ru/" target="_blank">
+						<img src="./assets/img/header/header__logo.svg" alt="Header logo" class="header__logo">
+					</a>
 					<div class="header__text">
 						<p>ПМК - динамично развивающаяся компания по продаже медицинского оборудования в России и Казахстане. Мы являемся официальным дилером Philips в России, а также партнерами более 500 компаний-производителей оборудования.</p>
 					</div>
@@ -32,8 +34,8 @@
 					<div class="header__background"></div>
 				</div>
 				<div class="header__vacancies vacancies">
-					<div class="vacancies__text"><span>www.permedcom.ru 6+</span></div>
-					<a href="#" target="_blank" class="vacancies__button">Вакансии</a>
+					<div class="vacancies__text"><a href="https://permedcom.ru/" target="_blank"><span>www.permedcom.ru 6+</span></a></div>
+					<a href="https://permedcom.ru/" target="_blank" class="vacancies__button">Вакансии</a>
 				</div>
 			</div>
 		</header>
